Extract Generation from GenerationEc and GenerationJdk